--- a/main.css
+++ b/main.css
@@ -359,10 +359,6 @@ footer .left-block, footer .right-block {
     padding: 7vh 10vw 7vh 10vw !important;
   }
 
-  #container_orange {
-    padding: 17vh 15vw 0 15vw !important;
-  }
-
   #container_orange div {
     text-align: center !important;
   }
