--- a/rates.css
+++ b/rates.css
@@ -77,4 +77,8 @@ td {
     padding-top: 20vh !important;
     padding: 7vh 10vw 7vh 10vw !important;
   }
+
+  #container_orange {
+    padding: 17vh 15vw 0 15vw !important;
+  }
 }
